<resources>
    <string name="app_name">Vesihiisi</string>

    <!-- Dynamic strings -->
    <string name="dynamic_ml">%1$dml</string>

    <!-- Toast strings -->
    <string name="invalid_consumption">Arvon on oltava 0 – 5000</string>
    <string name="invalid_age">Ikä voi olla vain 1–120</string>
    <string name="invalid_weight">Paino voi olla vain 1–635</string>
    <string name="invalid_gender">Valitse sukupuoli</string>
    <string name="value_stored">Arvo tallennettu</string>
    <string name="settings_stored">Asetukset tallennettu</string>
    <string name="target_achieved">Juomistavoite saavutettu!</string>



    <!-- Placeholders -->
    <string name="example_motivationalMessage">Tsemppausviesti</string>
    <string name="example_date">1.1.2000</string>
    <string name="example_volume">0ml</string>

    <!-- Titles -->
    <string name="title_history">Historia</string>
    <string name="title_etusivu">Etusivu</string>
    <string name="title_asetukset">Asetukset</string>
    <string name="title_palkinnot">Palkinnot</string>
    <string name="daysHistory_title">Päivän historia</string>
    <string name="update_title">Päivitä</string>
    <string name="age_title">Ikä</string>
    <string name="weight_title">Paino</string>
    <string name="gender_title">Sukupuoli</string>
    <string name="save_title">Tallenna</string>
    <string name="copyright_title">© Vesihiisi team 2021</string>

    <!-- Millilitres -->
    <string name="mug_amount_ml">250ml</string>
    <string name="bottle_amount_ml">500ml</string>
    <string name="jug_amount_ml">1000ml</string>

    <!-- Genders -->
    <string name="man_gender">Mies</string>
    <string name="woman_gender">Nainen</string>
    <string name="other_gender">Muu</string>

    <!-- Image alts -->
    <string name="brand_logo_alt">Brand logo</string>

    <string name="link_etusivu_alt">Linkki etusivulle</string>
    <string name="link_historia_alt">Linkki historiaan</string>
    <string name="link_trophies_alt">Linkki palkintoihin</string>
    <string name="link_settings_alt">Linkki asetuksiin</string>

    <!-- Authors -->
    <string name="adnan_avni">Adnan Avni</string>
    <string name="nafisul_nazrul">Nafisul Nazrul</string>
    <string name="arttu_pennanen">Arttu Pennanen</string>

    <!-- Trophies -->
    <string name="bronze_trophy_requirement">Asensit Vesihiiden</string>
    <string name="silver_trophy_requirement">Päivän tavoite saavutettu</string>
    <string name="gold_trophy_requirement">Kolmen päivän putki</string>

    <string name="bronze_trophy_alt">Pronssinen pokaali</string>
    <string name="silver_trophy_alt">Hopeinen pokaali</string>
    <string name="gold_trophy_alt">Kultainen pokaali</string>

    <!-- Misc -->
    <string name="circle">circle</string>
    <string name="slash_character">/</string>
    <string name="updateAmountOfConsumed_dec">Päivitä juodun veden määrä</string>






</resources>