<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrophiesActivity">

    <include
        android:id="@+id/include"
        layout="@layout/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal|bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/bronzeTrophyImageView"
        android:layout_width="86dp"
        android:layout_height="112dp"
        android:layout_marginStart="16dp"
        android:background="#E56B0E"
        app:layout_constraintBottom_toBottomOf="@+id/silverTrophyImageView"
        app:layout_constraintEnd_toStartOf="@+id/silverTrophyImageView"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/silverTrophyImageView"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/trophy"
        android:contentDescription="@string/bronze_trophy_alt" />

    <ImageView
        android:id="@+id/silverTrophyImageView"
        android:layout_width="86dp"
        android:layout_height="112dp"
        android:background="#727066"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trophy"
        android:contentDescription="@string/silver_trophy_alt" />

    <ImageView
        android:id="@+id/goldTrophyImageView"
        android:layout_width="86dp"
        android:layout_height="112dp"
        android:layout_marginEnd="16dp"
        android:background="#E5A80E"
        app:layout_constraintBottom_toBottomOf="@+id/silverTrophyImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toEndOf="@+id/silverTrophyImageView"
        app:layout_constraintTop_toTopOf="@+id/silverTrophyImageView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/trophy"
        android:contentDescription="@string/gold_trophy_alt" />

    <TextView
        android:id="@+id/textViewBronzeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/bronze_trophy_requirement"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/bronzeTrophyImageView"
        app:layout_constraintEnd_toEndOf="@+id/bronzeTrophyImageView"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toStartOf="@+id/bronzeTrophyImageView" />

    <TextView
        android:id="@+id/textViewSilverTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/silver_trophy_requirement"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/silverTrophyImageView"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="@+id/silverTrophyImageView"
        app:layout_constraintTop_toBottomOf="@+id/silverTrophyImageView" />

    <TextView
        android:id="@+id/textViewGoldTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/gold_trophy_requirement"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/goldTrophyImageView"
        app:layout_constraintEnd_toEndOf="@+id/goldTrophyImageView"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="@+id/goldTrophyImageView" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_palkinnot"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/silverTrophyImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>