<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DayDataActivity">

    <TextView
        android:id="@+id/textViewDayDataDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/example_date"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDayDataConsumed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_volume"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/slash_character"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewDayDataDate"
        app:layout_constraintStart_toStartOf="@+id/textViewDayDataDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewDayDataDate" />

    <TextView
        android:id="@+id/textViewDayDataTargetConsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_volume"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <include
        android:id="@+id/include"
        layout="@layout/navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal|bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sendUpdateConsumptionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onUpdateClick"
        android:text="@string/update_title"
        app:layout_constraintEnd_toEndOf="@+id/editTextUpdateConsumption"
        app:layout_constraintStart_toStartOf="@+id/editTextUpdateConsumption"
        app:layout_constraintTop_toBottomOf="@+id/editTextUpdateConsumption" />

    <EditText
        android:id="@+id/editTextUpdateConsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textViewBronzeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateAmountOfConsumed_dec"
        app:layout_constraintBottom_toTopOf="@+id/editTextUpdateConsumption"
        app:layout_constraintEnd_toEndOf="@+id/editTextUpdateConsumption"
        app:layout_constraintStart_toStartOf="@+id/editTextUpdateConsumption"
        android:labelFor="@+id/editTextUpdateConsumption"
        />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/daysHistory_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewDayDataDate"
        app:layout_constraintEnd_toEndOf="@+id/textViewDayDataDate"
        app:layout_constraintStart_toStartOf="@+id/textViewDayDataDate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />
</androidx.constraintlayout.widget.ConstraintLayout>